# TailChasingFixer

./: .gitignore  .pre-commit-config.yaml  .pypirc.template  .tailchasing.legacy.yml  .tailchasing.replication.yml  .tailchasing.yml  .tailchasing_history.db  .tailchasing_improved.yml  .tcdignore  .test_missing_config.yml  AGENTS.md  BIOLOGICALLY_INSPIRED_FEATURES.md  CLAUDE.md  CONTRIBUTING.md  DETAILED_ISSUES.csv  ISSUE_REPORT.md  LICENSE  MANIFEST.in  PERFORMANCE_OPTIMIZATIONS_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  README_PYPI.md  REFACTORING_SUMMARY.md  ROADMAP.md  VALIDATION_GUIDE.md  analysis.json  debug_missing.py  demo_report.json  demo_report_new.json  duplicates_plan.yaml  git_commands.txt  issues_database.json  missing_symbols.py  mypy.ini  push_advanced_features.sh  push_improvements.sh  pyproject.toml  pytest.ini  requirements.txt  run_push.sh  (+7 more)
.github/workflows/: publish-pypi.yml  publish.yml  tail-chasing.yml  test.yml
.tailchasing_checkpoints/: checkpoint_completed_1754997469.json  checkpoint_quarantine_check_1754997469.json
benchmarks/: README.md  __init__.py  run_benchmarks.py
benchmarks/metrics/: __init__.py  collector.py  convergence.py  cost.py  performance.py
benchmarks/runners/: __init__.py  base.py  multi_model.py  tracker.py
benchmarks/scenarios/: __init__.py  base.py  circular_dependency.py  complex_refactoring.py  semantic_duplicate.py  simple_import.py
config/: README.md
config/examples/: .tailchasing.canonical.yml  .tailchasing.chromatin.yml  .tailchasing.example.yml  example.tailchasing.yml
demo/: .tailchasing.yml  order_processor.py  payment_processor.py  run_demo.py  shipping.py
docs/: ADVANCED_FEATURES.md  IMPLEMENTED_IMPROVEMENTS.md  README_COMPREHENSIVE.md  SMART_FILTERING.md  TUTORIAL.md  api_reference.md  current_state_analysis.md  enhanced_features.md
docs/guides/: IMPROVEMENTS_REPORT.md  MIGRATION_GUIDE.md  test_coverage_summary.md
examples/: .tailchasing.yml  advanced_demo.py  circular_imports.py  context_window_thrashing.py  duplicate_functions.py  example_config.yml  hallucination_cascade.py  integration_example.py  run_demo.sh  run_semantic_demo.sh  semantic_demo.py  watchdog_integration.py
examples/demo_target/: __init__.py  analyzer.py  handler.py  processor.py
examples/fix_strategies/: circular_import_fix_example.py  phantom_fix_example.py  semantic_duplicate_fix_example.py
logs/: tcf_20250811.jsonl  tcf_20250812.jsonl  tcf_20250813.jsonl
scripts/: benchmark.py  build_pypi.sh  build_vscode_extension.sh  check_circular_imports.py  check_init_files.py  check_type_coverage.py  publish_pypi.sh  run_demo.sh  run_validation_report.sh  update_readme_metrics.py
tailchasing/: __init__.py  __main__.py  calibrate.py  cli.py  cli_enhanced.py  cli_main.py  cli_typer.py  config.py  ml_enhancements.py  performance.py  plugins.py  py.typed  version.py
tailchasing/analyzers/: __init__.py  base.py  base_class_extractor.py  base_documented.py  base_enhanced.py  base_visitor.py  canonical_policy.py  cargo_cult.py  cargo_cult_detector.py  chromatin_contact.py  circular_import_resolver.py  context_thrashing.py  cross_file_duplication.py  duplicates.py  empty_function_detector.py  enhanced_missing_symbols.py  enhanced_placeholders.py  explainer.py  fast_duplicates.py  function_coupling_analyzer.py  git_chains.py  import_graph.py  import_hierarchy_analyzer.py  llm_detector_improved.py  llm_filler_detector.py  lsh_duplicate_analyzer.py  missing_symbol_resolver.py  missing_symbols.py  mock_aware_placeholders.py  pattern_whitelist.py  phantom_function_detector.py  phantom_triage.py  placeholders.py  recombination_mapper.py  repository_detritus.py  root_cause_clustering.py  root_cause_tracer.py  runtime_aware_symbols.py  scope_aware_duplicates.py  semantic_hv.py  (+2 more)
tailchasing/catalytic/: __init__.py  catalytic_analyzer.py  catalytic_index.py  similarity_pipeline.py
tailchasing/ci/: github_integration.py  pipeline_analyzer.py
tailchasing/cli/: __init__.py  output_manager.py  profiler.py
tailchasing/core/: __init__.py  analysis_cache.py  batch_processor.py  cache.py  diagnostic_reporter.py  fix_planner.py  fix_playbooks.py  fixgen.py  ignore.py  issue_provenance.py  issues.py  loader.py  playbook_generator.py  reporting.py  resource_monitor.py  robust_parser.py  scoring.py  suggestions.py  (+4 more)
tests/: __init__.py  test_adaptive_selector.py  test_auto_fixes.py  test_batch_processor.py  test_cache.py  test_canonical_policy.py  test_canonical_selector.py  test_cargo_cult_detector.py  test_circular_import_resolver.py  test_cli_context_thrashing.py  test_cli_output.py  test_cluster_engine.py  test_context_thrashing.py  test_convergence.py  test_convergence_engine.py  test_duplicates.py  test_enhanced_missing_symbols.py  test_enhanced_patterns.py  test_enhanced_placeholders.py  test_enhanced_semantic_analysis.py  test_fast_duplicates.py  test_fix_planner.py  test_fix_strategies.py  test_function_coupling_analyzer.py  test_golden_fixtures.py  test_ignore.py  test_implementations.py  test_influence_detector.py  test_integration.py  test_issue_provenance.py  test_llm_adapters.py  test_loop_extrusion.py  test_lsh_index.py  test_nonlinear_navigator.py  test_optimization_performance.py  test_orchestrator.py  test_phantom_function_detector.py  test_playbooks.py  test_recombination_mapper.py  test_repository_detritus.py  (+11 more)
vscode-extension/: README.md  package.json
(+144 files in other folders)
