[project]
name = "tail-chasing-detector"
version = "0.1.0"
description = "Detects LLM-assisted tail-chasing anti-patterns in Python codebases."
authors = [{name="Rohan Vinaik"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.5",
    "tomli; python_version<'3.11'",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = ["pytest", "coverage", "ruff", "mypy", "black", "isort"]
visualization = [
    "plotly>=5.0",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "networkx>=3.0"
]
ml = [
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
    "faiss-cpu>=1.7"
]
performance = [
    "numba>=0.57",
    "ray>=2.0",
    "dask>=2023.1"
]
cli = [
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "watchdog>=3.0"
]
lsp = [
    "pygls>=1.0",
    "lsprotocol>=2023.0"
]
all = [
    "tail-chasing-detector[visualization,ml,performance,cli,lsp]"
]

[project.scripts]
tailchasing = "tailchasing.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
