[metadata]
name = tail-chasing-detector
version = attr: tailchasing.__version__
author = Rohan Vinaik
author_email = your.email@example.com
description = Detects LLM-induced tail-chasing anti-patterns in Python codebases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/TailChasingFixer
project_urls =
    Bug Tracker = https://github.com/yourusername/TailChasingFixer/issues
    Documentation = https://tail-chasing-detector.readthedocs.io
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Quality Assurance
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.9
install_requires =
    typing-extensions>=4.5
    tomli; python_version<'3.11'
    pyyaml>=6.0
    click>=8.0
    rich>=13.0
    numpy>=1.21.0
    scipy>=1.7.0

[options.packages.find]
exclude =
    tests*
    examples*

[options.entry_points]
console_scripts =
    tailchasing = tailchasing.cli:main